# Face-Recognition-Attendance-System

./: .gitignore  README.md  main.py  matches.csv  pyproject.toml
app/: __init__.py  app.py
data_preprocessing/: Data Preprocessing.ipynb
fras/: __init__.py  app.py  model.py
model/: __init__.py  face_recognition_model.py
sensor/: platformio.ini
sensor/src/: main.cpp
serial_reader/: main.py  matches.csv
ui/: cli.py
user_interface/: __init__.py
