[tool.poetry]
name = "face-recognition-attendance-system"
version = "0.1.0"
description = ""
authors = ["Vương Việt Hùng", "Trần Huy Khánh"]

[tool.poetry.dependencies]
python = "^3.9"
pyserial = "^3.5"
black = "^22.3.0"
mypy = "^0.942"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.942"
pylint = "^2.13.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
